TSK-1995 introduce lombok